# youtube-pipeline

./: .env.example  .gitignore  README.md  chatterbox_app.py  config.ini  content_generator.py  example_usage.py  image_generator.py  llm_providers.py  media_generator.py  music_generator.py  pipeline.py  requirements-chatterbox.txt  requirements.txt  sync_engine.py  validators.py  video_assembler.py  video_effects.py  video_themes.py  web_ui.py  youtube_uploader.py
chatterbox_studio/: .gitignore  __init__.py  chunker.py  extra_model_paths.yaml.example  history.py  job_queue.py  models_registry.py  system_info.py  tts_engine.py
chatterbox_studio/static/: studio.css  studio.js
chatterbox_studio/templates/: studio.html
desktop-ui/: main.js  package.json
desktop-ui/renderer/: index.html
desktop_app/: README.md  launcher.py  main.py  server.py  setup.py
tauri-app/: Cargo.toml  tauri.conf.json
tauri-app/src/: index.html  main.rs
templates/: index.html
