[package]
name = "youtube-video-generator"
version = "1.0.0"
description = "AI-powered YouTube video generator"
authors = ["You"]
license = "MIT"
edition = "2021"

[dependencies]
tauri = { version = "1.5", features = ["shell-open", "dialog"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = "0.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
